--- a/static/index.html
+++ b/static/index.html
@@ -187,7 +187,7 @@
         setState(prev => ({ ...prev, courseList: newList }));
       };
 
-      // 計算還款試算表，這裡為示意，僅簡單示範
+      // 計算還款試算表
       const calculate = () => {
         if (state.salary <= 0) {
           alert('請先設定您的薪水 (必須大於 0)。');
@@ -203,17 +203,96 @@
           alert('請新增還款人或課程後再進行試算。');
           return;
         }
-        // 這邊放你的試算邏輯，這裡簡單示範顯示文字
-        let resultText = `薪水：${state.salary.toFixed(2)}，生活費：${state.livingExpense.toFixed(2)}，起始月：${state.startMonth}\n\n`;
-        resultText += "還款人列表：\n";
-        state.repayList.forEach(p => {
-          resultText += ` - ${p.name} 欠款 ${p.debt.toFixed(2)} 元，剩餘 ${p.remainingDebt.toFixed(2)} 元\n`;
-        });
-        resultText += "\n課程列表：\n";
-        state.courseList.forEach((c, i) => {
-          resultText += ` - 課程${i+1} 總費用 ${c.fee.toFixed(2)} 元，期數 ${c.months}，剩餘 ${c.remainingFee.toFixed(2)} 元\n`;
-        });
-        setState(prev => ({ ...prev, calculationResult: resultText }));
+
+        // 複製資料避免改動原本state
+        const repayList = state.repayList.map(p => ({
+          name: p.name,
+          debt: p.debt,
+          remainingDebt: p.debt,
+        }));
+
+        const courseList = state.courseList.map(c => ({
+          fee: c.fee,
+          months: c.months,
+          remainingFee: c.fee,
+        }));
+
+        const salary = state.salary;
+        const livingExpense = state.livingExpense;
+        let currentMonth = state.startMonth; // 1~12
+        let currentYear = new Date().getFullYear();
+
+        let monthCount = 0;
+        let resultLines = [];
+        resultLines.push(`薪水：${salary.toFixed(2)} 元，生活費：${livingExpense.toFixed(2)} 元，起始月：${currentMonth}\n`);
+        resultLines.push("試算結果如下：\n");
+
+        // 計算每個課程每月應付金額（平均攤還）
+        const courseMonthlyPays = courseList.map(c => c.fee / c.months);
+
+        // 繼續試算直到所有課程和欠款都還清
+        while (
+          repayList.some(p => p.remainingDebt > 0) ||
+          courseList.some(c => c.remainingFee > 0)
+        ) {
+          monthCount++;
+          resultLines.push(`===== 第 ${monthCount} 個月：${currentYear} 年 ${currentMonth} 月 =====`);
+
+          let availableMoney = salary - livingExpense;
+          if (availableMoney <= 0) {
+            resultLines.push(`生活費過高，薪水扣除生活費後無法還款。試算結束。`);
+            break;
+          }
+
+          // 還課程費（每期平均分攤，分月扣款）
+          let coursePayThisMonth = 0;
+          for (let i = 0; i < courseList.length; i++) {
+            const c = courseList[i];
+            if (c.remainingFee > 0) {
+              const pay = Math.min(courseMonthlyPays[i], c.remainingFee, availableMoney);
+              c.remainingFee -= pay;
+              availableMoney -= pay;
+              coursePayThisMonth += pay;
+              resultLines.push(`課程 ${i + 1} 還款 ${pay.toFixed(2)} 元，剩餘 ${c.remainingFee.toFixed(2)} 元`);
+              if (availableMoney <= 0) break;
+            }
+          }
+
+          // 還欠款人（依序還）
+          let repayThisMonth = 0;
+          if (availableMoney > 0) {
+            for (let i = 0; i < repayList.length; i++) {
+              const p = repayList[i];
+              if (p.remainingDebt > 0) {
+                const pay = Math.min(p.remainingDebt, availableMoney);
+                p.remainingDebt -= pay;
+                availableMoney -= pay;
+                repayThisMonth += pay;
+                resultLines.push(`還款人 ${p.name} 還款 ${pay.toFixed(2)} 元，剩餘欠款 ${p.remainingDebt.toFixed(2)} 元`);
+                if (availableMoney <= 0) break;
+              }
+            }
+          }
+
+          if (coursePayThisMonth === 0 && repayThisMonth === 0) {
+            resultLines.push("無法繳納更多款項，試算提前結束。");
+            break;
+          }
+
+          // 更新月份跟年份
+          currentMonth++;
+          if (currentMonth > 12) {
+            currentMonth = 1;
+            currentYear++;
+          }
+        }
+
+        resultLines.push(`\n🎉 全部清償完成，共花費 ${monthCount} 個月。`);
+
+        setState(prev => ({
+          ...prev,
+          calculationResult: resultLines.join('\n'),
+        }));
       };
 
       // 匯出CSV（示意）
@@ -262,11 +341,9 @@
       const ModalContent = () => {
         if (!state.modalType) return null;
 
-        // 用 ref 取得輸入框值 (簡單示範用 controlled 也行)
         let input1 = React.useRef(null);
         let input2 = React.useRef(null);
 
-        // 處理提交
         const handleSubmit = () => {
           switch (state.modalType) {
             case 'addPerson':
@@ -289,7 +366,6 @@
           }
         };
 
-        // Modal 標題與欄位文字
         let title = '';
         let label1 = '';
         let label2 = '';
@@ -427,21 +503,13 @@
             <button
               className="bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700"
               onClick={calculate}
-              title="計算試算表"
+              title="開始計算"
             >
               計算試算
             </button>
 
             <button
-              className="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700"
-              onClick={exportCsv}
-              title="匯出 CSV"
-            >
-              匯出 CSV
-            </button>
-
-            <button
-              className="bg-gray-400 text-black px-4 py-2 rounded hover:bg-gray-500"
+              className="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600"
               onClick={copyResult}
               title="複製試算結果"
             >
@@ -457,111 +525,100 @@
             </button>
 
             <button
-              className="bg-black text-white px-4 py-2 rounded hover:bg-gray-900"
+              className="bg-gray-700 text-white px-4 py-2 rounded hover:bg-gray-800"
               onClick={exitApp}
-              title="離開"
+              title="離開網頁"
             >
               離開
             </button>
           </div>
 
-          {/* 還款人清單 */}
-          <section className="mb-6">
-            <h2 className="text-xl font-semibold mb-2">還款人清單</h2>
+          {/* 還款人列表 */}
+          <div className="mb-6 bg-white rounded shadow p-4 overflow-auto max-h-48">
+            <h2 className="text-xl font-semibold mb-3">還款人列表</h2>
             {state.repayList.length === 0 ? (
-              <p className="text-gray-500">尚無還款人資料，請新增。</p>
+              <p className="text-gray-500">尚無還款人，請新增。</p>
             ) : (
-              <div className="border border-gray-300 rounded p-2 max-h-48 overflow-y-auto bg-white">
-                <table className="w-full text-left">
-                  <thead className="border-b border-gray-300">
-                    <tr>
-                      <th className="px-2 py-1">姓名</th>
-                      <th className="px-2 py-1">欠款金額(元)</th>
-                      <th className="px-2 py-1">剩餘欠款(元)</th>
-                      <th className="px-2 py-1">操作</th>
+              <table className="w-full text-sm text-left">
+                <thead className="bg-gray-100">
+                  <tr>
+                    <th className="p-2">姓名</th>
+                    <th className="p-2">欠款金額 (元)</th>
+                    <th className="p-2">操作</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {state.repayList.map((p, i) => (
+                    <tr key={i} className="border-b">
+                      <td className="p-2">{p.name}</td>
+                      <td className="p-2">{p.debt.toFixed(2)}</td>
+                      <td className="p-2">
+                        <button
+                          className="text-red-600 hover:text-red-800"
+                          onClick={() => removePerson(i)}
+                        >
+                          刪除
+                        </button>
+                      </td>
                     </tr>
-                  </thead>
-                  <tbody>
-                    {state.repayList.map((p, i) => (
-                      <tr key={i} className="border-b border-gray-200">
-                        <td className="px-2 py-1">{p.name}</td>
-                        <td className="px-2 py-1">{p.debt.toFixed(2)}</td>
-                        <td className="px-2 py-1">{p.remainingDebt.toFixed(2)}</td>
-                        <td className="px-2 py-1">
-                          <button
-                            className="text-red-600 hover:underline"
-                            onClick={() => removePerson(i)}
-                          >
-                            刪除
-                          </button>
-                        </td>
-                      </tr>
-                    ))}
-                  </tbody>
-                </table>
-              </div>
+                  ))}
+                </tbody>
+              </table>
             )}
-          </section>
+          </div>
 
-          {/* 課程費用清單 */}
-          <section className="mb-6">
-            <h2 className="text-xl font-semibold mb-2">課程費用清單</h2>
+          {/* 課程費用列表 */}
+          <div className="mb-6 bg-white rounded shadow p-4 overflow-auto max-h-48">
+            <h2 className="text-xl font-semibold mb-3">課程費用列表</h2>
             {state.courseList.length === 0 ? (
-              <p className="text-gray-500">尚無課程費用資料，請新增。</p>
+              <p className="text-gray-500">尚無課程費用，請新增。</p>
             ) : (
-              <div className="border border-gray-300 rounded p-2 max-h-48 overflow-y-auto bg-white">
-                <table className="w-full text-left">
-                  <thead className="border-b border-gray-300">
-                    <tr>
-                      <th className="px-2 py-1">課程編號</th>
-                      <th className="px-2 py-1">總費用(元)</th>
-                      <th className="px-2 py-1">期數(月)</th>
-                      <th className="px-2 py-1">剩餘費用(元)</th>
-                      <th className="px-2 py-1">操作</th>
+              <table className="w-full text-sm text-left">
+                <thead className="bg-gray-100">
+                  <tr>
+                    <th className="p-2">總費用 (元)</th>
+                    <th className="p-2">期數 (月)</th>
+                    <th className="p-2">操作</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {state.courseList.map((c, i) => (
+                    <tr key={i} className="border-b">
+                      <td className="p-2">{c.fee.toFixed(2)}</td>
+                      <td className="p-2">{c.months}</td>
+                      <td className="p-2">
+                        <button
+                          className="text-red-600 hover:text-red-800"
+                          onClick={() => removeCourse(i)}
+                        >
+                          刪除
+                        </button>
+                      </td>
                     </tr>
-                  </thead>
-                  <tbody>
-                    {state.courseList.map((c, i) => (
-                      <tr key={i} className="border-b border-gray-200">
-                        <td className="px-2 py-1">{i + 1}</td>
-                        <td className="px-2 py-1">{c.fee.toFixed(2)}</td>
-                        <td className="px-2 py-1">{c.months}</td>
-                        <td className="px-2 py-1">{c.remainingFee.toFixed(2)}</td>
-                        <td className="px-2 py-1">
-                          <button
-                            className="text-red-600 hover:underline"
-                            onClick={() => removeCourse(i)}
-                          >
-                            刪除
-                          </button>
-                        </td>
-                      </tr>
-                    ))}
-                  </tbody>
-                </table>
-              </div>
+                  ))}
+                </tbody>
+              </table>
             )}
-          </section>
+          </div>
 
-          {/* 計算結果區 */}
-          <section className="mb-4">
-            <h2 className="text-xl font-semibold mb-2">試算結果</h2>
+          {/* 試算結果區 */}
+          <div className="flex-grow bg-white rounded shadow p-4 overflow-auto">
+            <h2 className="text-xl font-semibold mb-3">試算結果</h2>
             <textarea
               readOnly
+              className="w-full h-64 resize-none border rounded p-2 font-mono"
               value={state.calculationResult}
-              rows={12}
-              className="w-full p-2 border border-gray-300 rounded bg-white resize-none"
-              placeholder="按下「計算試算」後會顯示結果"
+              placeholder="試算結果會顯示於此..."
             />
-          </section>
+          </div>
 
-          {state.modalType && <ModalContent />}
+          {/* Modal */}
+          <ModalContent />
         </div>
       );
     }
 
     ReactDOM.createRoot(document.getElementById('root')).render(<App />);
-
   </script>
 </body>
 </html>
