--- a/static/index.html
+++ b/static/index.html
@@ -41,6 +41,7 @@
   </style>
 </head>
 <body>
+  <meta name="google-site-verification" content="BCvXzgcedvqCehBvT5sfZjBzHe56ld3ft6gNTqERsyE" />
   <div id="root" class="h-full flex flex-col"></div>
 
   <script type="text/babel">
