--- a/static/index.html
+++ b/static/index.html
@@ -39,6 +39,7 @@
       white-space: pre-wrap;
     }
   </style>
+  <meta name="google-site-verification" content="BCvXzgcedvqCehBvT5sfZjBzHe56ld3ft6gNTqERsyE" />
 </head>
 <body>
   <meta name="google-site-verification" content="BCvXzgcedvqCehBvT5sfZjBzHe56ld3ft6gNTqERsyE" />
