--- a/static/index.html
+++ b/static/index.html
@@ -42,6 +42,87 @@
     }
   </style>
   <meta name="google-site-verification" content="BCvXzgcedvqCehBvT5sfZjBzHe56ld3ft6gNTqERsyE" />
+@media screen and (max-width:720px) {
+  #cookiebanner a.c-button { 
+    width:100%; 
+    box-sizing:border-box; 
+    text-align:center; 
+    margin-bottom:20px;} 
+  #c-right { 
+    float:none;
+  }
+  #c-left { 
+    float:none;
+  }   
+  #cookiebanner p.c-message { 
+    margin-bottom:20px;
+  }   
+}    
+
+@media screen and (min-width:720px) {
+  #cookiebanner #c-left { 
+    float:left; 
+    max-width:80%;
+  }
+  #cookiebanner #c-right { 
+    float:right; 
+  }
+}
+
+#cookiebanner { 
+  box-sizing: border-box; 
+  background-color:rgb(36,36,39); 
+  opacity: 0.9; width:100%; 
+  padding:25px 40px; 
+  position: fixed; 
+  z-index: 2147483645; 
+  bottom:-800px
+}
+#cookiebanner p { 
+  font-size:14px; 
+  line-height:1.4;
+}
+#cookiebanner .c-header { 
+  text-transform:uppercase; 
+  color:#fff; 
+  font-weight:bold; 
+  margin-bottom:4px;
+}
+#cookiebanner p.c-message {
+  font-size:14px; 
+  color:#999;
+}
+#cookiebanner a { 
+  font-weight:bold; 
+  color:#999;
+}
+#cookiebanner a:hover { 
+  color:#fff;
+}
+
+#cookiebanner a.c-button { 
+  border-radius: 4px;
+  background-color: rgb(255,255,255);
+  box-shadow: 0 2px 0 0 rgb(221,221,221);
+  border:1px solid rgb(221,221,221);
+  padding:12px 60px;
+  text-decoration:none;
+  display:inline-block;
+  vertical-align:middle;
+  margin-top:10px;
+  color:#666;
+  font-size:16px;
+  -o-transition:.2s;
+  -ms-transition:.2s;
+  -moz-transition:.2s;
+  -webkit-transition:.2s;
+  transition:.2s;
+}
+
+#cookiebanner a.c-button:hover { 
+  box-shadow:none; 
+  background-color:#f8f8f8;
+}
 </head>
 <body>
   <meta name="google-site-verification" content="BCvXzgcedvqCehBvT5sfZjBzHe56ld3ft6gNTqERsyE" />
@@ -624,5 +705,36 @@
 
     ReactDOM.createRoot(document.getElementById('root')).render(<App />);
   </script>
+  <div id="cookiebanner" lang="[#LANGUAGE#]" dir="[#TEXTDIRECTION#]" ng-non-bindable>
+  <div id="c-left">
+    <p class="c-header">[#TITLE#]</p>
+    <p class="c-message">[#TEXT#]</p>
+  </div>
+  <div id="c-right">
+    <a href="javascript:void(0)" onclick="Cookiebot.dialog.submitConsent()" class="c-button">OK</a>
+  </div>
+  <div style="clear:both"></div>
+</div>
+  var cookieBannerSliderPos = 0;
+
+function showCookieBanner() {
+    var cookiebanner = document.getElementById("cookiebanner");
+    var dialogHeight = parseInt(cookiebanner.offsetHeight);
+    cookiebanner.style.bottom = (cookieBannerSliderPos - dialogHeight) + "px";
+    cookieBannerSliderPos += 4;
+    if (cookieBannerSliderPos < dialogHeight) {
+        setTimeout(function () {
+            showCookieBanner();
+        }, 1);
+    } else {
+        cookieBannerSliderPos = 0;
+        cookiebanner.style.bottom = "0px";
+    }
+}
+
+function hideCookieBanner() {
+    var cookiebanner = document.getElementById("cookiebanner");
+    cookiebanner.style.display = "none";
+}
 </body>
 </html>
