--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,23 @@
     }
   </style>
   <meta name="google-site-verification" content="BCvXzgcedvqCehBvT5sfZjBzHe56ld3ft6gNTqERsyE" />
+<!-- Google Analytics GA4 追蹤碼 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){ dataLayer.push(arguments); }
 
+  gtag('js', new Date());
+
+  // Google Consent Mode v2 預設為拒絕，等待使用者選擇
+  gtag('consent', 'default', {
+    ad_storage: 'denied',
+    analytics_storage: 'denied'
+  });
+
+  // 初始化 Google Analytics
+  gtag('config', 'G-WGEGPPKK5D');
+</script>
 </head>
 <body>
   <meta name="google-site-verification" content="BCvXzgcedvqCehBvT5sfZjBzHe56ld3ft6gNTqERsyE" />
