--- a/static/index.html
+++ b/static/index.html
@@ -641,39 +641,39 @@
 
     ReactDOM.createRoot(document.getElementById('root')).render(<App />);
   </script>
-  <div id="cookiebanner" lang="[#LANGUAGE#]" dir="[#TEXTDIRECTION#]" ng-non-bindable>
-  <div id="c-left">
-    <p class="c-header">[#TITLE#]</p>
-    <p class="c-message">[#TEXT#]</p>
-  </div>
-  <div id="c-right">
-    <a href="javascript:void(0)" onclick="Cookiebot.dialog.submitConsent()" class="c-button">OK</a>
-  </div>
-  <div style="clear:both"></div>
 </div>
-<!-- ✅ Cookie 同意橫幅（簡潔正規版） -->
-<div id="cookie-banner" style="position:fixed;bottom:0;left:0;width:100%;background:#f8f8f8;color:#333;padding:16px;box-shadow:0 -2px 8px rgba(0,0,0,0.1);z-index:9999;text-align:center;">
-  <p style="margin:0 0 8px;font-weight:bold;font-size:16px;">我們重視您的隱私</p>
-  <p style="margin:0 0 12px;font-size:14px;">
-    本網站使用 Cookie 改善使用者體驗與進行匿名統計分析。按下「OK」即表示您同意使用 Cookie。
-  </p>
-  <button onclick="acceptCookies()" style="padding:8px 16px;">OK</button>
+<!-- ✅ 簡潔實用 Cookie 同意橫幅 -->
+<div id="cookie-banner" style="
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: #f9f9f9;
+  border-top: 1px solid #ddd;
+  padding: 12px 16px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  color: #333;
+  z-index: 9999;">
+  <span>本網站使用 Cookie 以改善使用體驗。點選 OK 即表示您同意。</span>
+  <button onclick="acceptCookies()" style="
+    margin-left: 12px;
+    padding: 6px 14px;
+    background: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;">OK</button>
 </div>
 
 <script>
   function acceptCookies() {
     localStorage.setItem('cookieConsent', 'accepted');
-    if (typeof gtag === 'function') {
-      gtag('consent', 'update', {
-        ad_storage: 'granted',
-        analytics_storage: 'granted'
-      });
-    }
     document.getElementById('cookie-banner').style.display = 'none';
   }
 
-  // 已選擇過就不再顯示橫幅
-  if (localStorage.getItem('cookieConsent')) {
+  if (localStorage.getItem('cookieConsent') === 'accepted') {
     document.getElementById('cookie-banner').style.display = 'none';
   }
 </script>
